--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <meta charset="utf-8" />
 
   </head>
+  <title>At the Apartment</title>
   <body>
     <main>
+        <h1>At the Apartment</h1>
     </main>
     <script src="sketch.js"></script>
+    <h2>ENTER</h2>
   </body>
 </html>
