--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <title>At the Apartment</title>
   <body>
     <main>
-        <h1>At the Apartment</h1>
+        <h1 id="ATA">At the Apartment</h1>
     </main>
     <script src="sketch.js"></script>
-    <h2>ENTER</h2>
+    <!-- REMOVE <h2> ENTER </h2> -->
   </body>
 </html>
