--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta charset="utf-8" />
 
   </head>
-  <title>Juntos Apartment</title>
+  <title>United Apartment</title>
   <body>
     <main>
-        <h1 id="JNTS">JUN_TOS</h1>
+        <h1 id="United">United</h1>
     </main>
     <script src="sketch.js"></script>
     <!-- REMOVE <h2> ENTER </h2> -->
